--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -136,7 +136,7 @@ html, body {
     }
 
     a {
-      color: $nav-text;
+      color: $lang-select-text;
       text-decoration: none;
 
       &:hover {
@@ -503,6 +503,11 @@ html, body {
 
   aside.success:before {
     @extend %icon-ok-sign;
+  }
+
+  .tick:before {
+    @extend %icon-ok-sign;
+    color: green;
   }
 
   .search-highlight {
